--- a/app/src/main/res/layout/activity_edit_my_info.xml
+++ b/app/src/main/res/layout/activity_edit_my_info.xml
@@ -38,7 +38,7 @@
                 android:textColor="#000000"
                 android:letterSpacing="-0.03"
                 android:gravity="center_horizontal"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:text="기본 정보 수정"/>
 
             <TextView
@@ -72,7 +72,7 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
         android:text="성명"
@@ -101,7 +101,7 @@
             android:layout_marginVertical="14dp"
             android:background="@null"
             style="@style/EditTextStyle"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:hint="성"
             android:singleLine="true"
             android:letterSpacing="-0.01"
@@ -132,7 +132,7 @@
             android:layout_marginVertical="14dp"
             android:background="@null"
             style="@style/EditTextStyle"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:hint="이름"
             android:singleLine="true"
             android:letterSpacing="-0.01"
@@ -148,7 +148,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
         android:text="나이"
@@ -176,7 +176,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
             android:background="@null"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="#343434"
@@ -189,7 +189,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
         android:text="성별"
@@ -217,7 +217,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/roboto_bold_otf"
             android:gravity="center_horizontal"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
@@ -243,7 +243,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/roboto_bold_otf"
             android:gravity="center_horizontal"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
