--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:lineHeight="33sp"
         android:text="알바집으로 알바관리 A-Z까지"
         android:textColor="@color/customBlack"
@@ -60,7 +60,7 @@
         android:layout_marginTop="120dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/btn_main_yellow_fill_rounded"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="4sp"
         android:text="회원가입"
@@ -80,7 +80,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/rectangle_fill_light_gray_rounded_15"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="4sp"
         android:text="로그인"
@@ -100,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="127dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="19sp"
         android:text="비밀번호 재설정"
