--- a/app/src/main/res/layout/activity_service_law.xml
+++ b/app/src/main/res/layout/activity_service_law.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:gravity="center_horizontal"
                 android:letterSpacing="-0.03"
                 android:text="서비스 이용약관"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="24dp"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/roboto_medium_otf"
                 android:letterSpacing="-0.03"
                 android:text="이용약관"
                 android:textColor="#333333"
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="24dp"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/roboto_medium_otf"
                 android:letterSpacing="-0.03"
                 android:text="개인정보 처리방침"
                 android:textColor="#333333"
