--- a/app/src/main/res/layout/fragment_agreement.xml
+++ b/app/src/main/res/layout/fragment_agreement.xml
@@ -24,7 +24,7 @@
         android:letterSpacing="-0.03"
         android:layout_marginTop="68dp"
         android:layout_marginStart="36dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:textStyle="bold"
         android:textColor="@color/customBlack"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_toEndOf="@id/cb_agree_all"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/roboto_bold_otf"
             android:text="전체 동의"
             android:gravity="center_vertical"
             android:textColor="@color/customBlack"
@@ -94,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_toEndOf="@id/cb_age"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:text="(필수) 만 14세 이상입니다."
             android:gravity="center_vertical"
             android:textColor="@color/customBlack"
@@ -126,7 +126,7 @@
             android:layout_marginStart="16dp"
             android:paddingEnd="10dp"
             android:layout_toEndOf="@id/cb_service"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:text="(필수) 서비스 이용약관 동의"
             android:gravity="center_vertical"
             android:textColor="@color/customBlack"
@@ -170,7 +170,7 @@
             android:layout_marginStart="16dp"
             android:paddingEnd="10dp"
             android:layout_toEndOf="@id/cb_collect"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:text="(필수) 서비스 이용약관 동의"
             android:gravity="center_vertical"
             android:textColor="@color/customBlack"
@@ -201,7 +201,7 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:enabled="false"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
