--- a/app/src/main/res/layout/fragment_input_phone.xml
+++ b/app/src/main/res/layout/fragment_input_phone.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="68dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="9sp"
         android:text="전화번호를 입력해주세요."
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:letterSpacing="-0.03"
                 android:lineSpacingExtra="21sp"
                 android:text="인증"
@@ -149,7 +149,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="16dp"
             android:layout_toStartOf="@id/rl_clickable_resend"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:gravity="center_vertical"
             android:letterSpacing="-0.03"
             android:lineSpacingExtra="19sp"
@@ -173,7 +173,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_marginHorizontal="5dp"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:letterSpacing="-0.03"
                 android:lineSpacingExtra="21sp"
                 android:text="재전송"
@@ -192,7 +192,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/btn_disable_yellow_fill_rounded"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:stateListAnimator="@null"
         android:text="다음"
         android:enabled="false"
