--- a/app/src/main/res/layout/activity_edit_shop_info_two.xml
+++ b/app/src/main/res/layout/activity_edit_shop_info_two.xml
@@ -198,7 +198,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
         android:text="영업시간"
@@ -268,7 +268,7 @@
         android:layout_marginHorizontal="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:gravity="center"
         android:text="~"
         android:textColor="#c6c6c6"
@@ -284,7 +284,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:gravity="end"
         android:letterSpacing="-0.03"
         android:text="0시간"
@@ -326,7 +326,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="47dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
         android:text="급여일"
