--- a/app/src/main/res/layout/activity_edit_worker_one.xml
+++ b/app/src/main/res/layout/activity_edit_worker_one.xml
@@ -500,7 +500,7 @@
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/roboto_bold_otf"
                     android:gravity="center"
                     android:text="~"
                     android:textColor="#c6c6c6"
@@ -543,7 +543,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:fontFamily="@font/roboto_medium"
+                    android:fontFamily="@font/roboto_medium_otf"
                     android:gravity="end"
                     android:letterSpacing="-0.03"
                     android:text="0시간"
