--- a/app/src/main/res/layout/activity_home_alarm.xml
+++ b/app/src/main/res/layout/activity_home_alarm.xml
@@ -38,7 +38,7 @@
                 android:textColor="#000000"
                 android:letterSpacing="-0.03"
                 android:gravity="center_horizontal"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:text="알림"/>
         </RelativeLayout>
 
