--- a/app/src/main/res/layout/activity_home_shop_list.xml
+++ b/app/src/main/res/layout/activity_home_shop_list.xml
@@ -85,7 +85,7 @@
         android:stateListAnimator="@null"
         android:textStyle="bold"
         android:textSize="16sp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
