--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:textSize="24sp"
         android:layout_marginTop="68dp"
         android:layout_marginStart="36dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:textStyle="bold"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="9sp"
@@ -43,7 +43,7 @@
         android:textColor="#6f6f6f"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         android:layout_marginTop="36dp"/>
@@ -92,7 +92,7 @@
         android:textColor="#6f6f6f"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/rl_phone_input"
         android:layout_marginTop="24dp"/>
@@ -134,7 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="19sp"
         android:text="비밀번호 재설정"
@@ -155,7 +155,7 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:enabled="false"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
