--- a/app/src/main/res/layout/activity_manage_my_info.xml
+++ b/app/src/main/res/layout/activity_manage_my_info.xml
@@ -39,7 +39,7 @@
                 android:textColor="#000000"
                 android:letterSpacing="-0.03"
                 android:gravity="center_horizontal"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:text="내 정보 관리"/>
         </RelativeLayout>
 
@@ -69,7 +69,7 @@
         android:textStyle="bold"
         android:textSize="13sp"
         android:layout_alignParentStart="true"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:textColor="#a3a3a3"
         android:letterSpacing="-0.03" />
 
@@ -220,7 +220,7 @@
             android:textStyle="bold"
             android:textSize="13sp"
             android:layout_alignParentStart="true"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/roboto_bold_otf"
             android:textColor="#a3a3a3"
             android:letterSpacing="-0.03" />
 
