--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -40,7 +40,7 @@
                android:textColor="#000000"
                android:letterSpacing="-0.03"
                android:gravity="center_horizontal"
-               android:fontFamily="@font/roboto_bold"
+               android:fontFamily="@font/roboto_bold_otf"
                android:text="설정"/>
        </RelativeLayout>
 
@@ -66,7 +66,7 @@
         android:layout_marginStart="24dp"
         android:textStyle="bold"
         android:textSize="13sp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:textColor="#a3a3a3"
         android:letterSpacing="-0.03" />
 
@@ -97,7 +97,7 @@
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:fontFamily="@font/roboto_medium_otf"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -135,7 +135,7 @@
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:fontFamily="@font/roboto_medium_otf"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -155,7 +155,7 @@
         app:layout_constraintStart_toStartOf="@id/tv_set_service"
         app:layout_constraintTop_toBottomOf="@id/ll_set_service"
         android:layout_marginTop="36dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:textStyle="bold"
         android:textSize="13sp"
         android:textColor="#a3a3a3"/>
@@ -187,7 +187,7 @@
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:fontFamily="@font/roboto_medium_otf"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -227,7 +227,7 @@
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:fontFamily="@font/roboto_medium_otf"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -264,7 +264,7 @@
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:fontFamily="@font/roboto_medium_otf"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -290,7 +290,7 @@
         android:layout_marginStart="24dp"
         android:textStyle="bold"
         android:textSize="13sp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:textColor="#a3a3a3"
         android:letterSpacing="-0.03" />
 
@@ -321,7 +321,7 @@
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:fontFamily="@font/roboto_medium_otf"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
@@ -359,7 +359,7 @@
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:fontFamily="@font/roboto_medium_otf"/>
 
             <ImageButton
                 android:layout_width="wrap_content"
