--- a/app/src/main/res/layout/activity_setting_alarm.xml
+++ b/app/src/main/res/layout/activity_setting_alarm.xml
@@ -39,7 +39,7 @@
                 android:textColor="#000000"
                 android:letterSpacing="-0.03"
                 android:gravity="center_horizontal"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:text="알림 설정"/>
         </RelativeLayout>
 
@@ -66,7 +66,7 @@
         android:layout_marginStart="24dp"
         android:textStyle="bold"
         android:textSize="13sp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:textColor="#a3a3a3"
         android:letterSpacing="-0.03" />
 
@@ -100,7 +100,7 @@
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:fontFamily="@font/roboto_medium_otf"/>
 
             <TextView
                 android:id="@+id/tv_info"
