--- a/app/src/main/res/layout/activity_setting_m_my_page.xml
+++ b/app/src/main/res/layout/activity_setting_m_my_page.xml
@@ -39,7 +39,7 @@
                 android:textColor="#000000"
                 android:letterSpacing="-0.03"
                 android:gravity="center_horizontal"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:text="설정"/>
         </RelativeLayout>
 
