--- a/app/src/main/res/layout/fragment_input_info.xml
+++ b/app/src/main/res/layout/fragment_input_info.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
         android:text="성명"
@@ -63,7 +63,7 @@
             android:layout_marginVertical="14dp"
             android:background="@null"
             style="@style/EditTextStyle"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:hint="성"
             android:singleLine="true"
             android:letterSpacing="-0.01"
@@ -94,7 +94,7 @@
             android:layout_marginVertical="14dp"
             android:background="@null"
             style="@style/EditTextStyle"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:hint="이름"
             android:singleLine="true"
             android:letterSpacing="-0.01"
@@ -110,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
         android:text="나이"
@@ -137,7 +137,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="14dp"
             android:background="@null"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:text="출생년도\u0028YYYY\u0029"
             android:inputType="number"
             android:letterSpacing="-0.01"
@@ -152,7 +152,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="13sp"
         android:text="성별"
@@ -179,7 +179,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/roboto_bold_otf"
             android:gravity="center_horizontal"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
@@ -205,7 +205,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/roboto_bold_otf"
             android:gravity="center_horizontal"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="13sp"
@@ -224,7 +224,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/btn_disable_yellow_fill_rounded"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:stateListAnimator="@null"
         android:text="회원가입 완료"
         android:textColor="@color/disableTxtColor"
