--- a/app/src/main/res/layout/fragment_input_pw.xml
+++ b/app/src/main/res/layout/fragment_input_pw.xml
@@ -23,7 +23,7 @@
         android:textSize="24sp"
         android:layout_marginTop="68dp"
         android:layout_marginStart="36dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:textStyle="bold"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="9sp"
@@ -120,7 +120,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호가 일치하지 않습니다."
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_medium_otf"
         android:textStyle="normal"
         android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
@@ -144,7 +144,7 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:enabled="false"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
