--- a/app/src/main/res/layout/fragment_reset_certify.xml
+++ b/app/src/main/res/layout/fragment_reset_certify.xml
@@ -24,7 +24,7 @@
         android:textSize="24sp"
         android:layout_marginTop="68dp"
         android:layout_marginStart="36dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:textStyle="bold"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="9sp"
@@ -80,7 +80,7 @@
                 android:lineSpacingExtra="21sp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:text="인증"/>
 
         </RelativeLayout>
@@ -124,7 +124,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginEnd="16dp"
             android:layout_toStartOf="@id/rl_re_send"
-            android:fontFamily="@font/roboto_medium"
+            android:fontFamily="@font/roboto_medium_otf"
             android:gravity="center_vertical"
             android:letterSpacing="-0.03"
             android:lineSpacingExtra="19sp"
@@ -152,7 +152,7 @@
                 android:lineSpacingExtra="21sp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:fontFamily="@font/roboto_bold"
+                android:fontFamily="@font/roboto_bold_otf"
                 android:layout_marginHorizontal="5dp"
                 android:text="재전송"/>
 
@@ -170,7 +170,7 @@
         android:stateListAnimator="@null"
         android:textStyle="bold"
         android:textSize="16sp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_bold_otf"
         android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
