--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,9 @@
         <!-- Customize your theme here. -->
         <item name="colorControlHighlight">#cecece</item>
 
+        <!--폰트 여백 제거-->
+        <item name="android:includeFontPadding">false</item>
+
         <!--custom font-family 적용-->
         <item name="android:textViewStyle">@style/customTextViewFontStyle</item>
         <item name="android:buttonStyle">@style/customButtonFontStyle</item>
@@ -135,6 +138,105 @@
         <item name="android:lineSpacingExtra">3sp</item>
     </style>
 
+
+    <!-- 폰트 설정 -->
+    <style name="Header_1">
+        <item name="android:fontFamily">@font/roboto_bold_otf</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">28sp</item>
+        <item name="lineHeight">41sp</item>
+    </style>
+
+    <style name="Header_2">
+        <item name="android:fontFamily">@font/roboto_bold_otf</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">24sp</item>
+        <item name="lineHeight">33sp</item>
+    </style>
+
+    <style name="Header_3">
+        <item name="android:fontFamily">@font/roboto_bold_otf</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">22sp</item>
+        <item name="lineHeight">28sp</item>
+    </style>
+
+    <style name="Header_4">
+        <item name="android:fontFamily">@font/roboto_bold_otf</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="lineHeight">21sp</item>
+    </style>
+
+    <style name="Header_5">
+        <item name="android:fontFamily">@font/roboto_bold_otf</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="lineHeight">12sp</item>
+    </style>
+
+    <style name="body_1">
+        <item name="android:fontFamily">@font/roboto_medium_otf</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">16sp</item>
+        <item name="lineHeight">23sp</item>
+    </style>
+
+    <style name="body_2">
+        <item name="android:fontFamily">@font/roboto_bold_otf</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="lineHeight">19sp</item>
+    </style>
+
+    <style name="body_3">
+        <item name="android:fontFamily">@font/roboto_medium_otf</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">14sp</item>
+        <item name="lineHeight">20sp</item>
+    </style>
+
+    <style name="body_4">
+        <item name="android:fontFamily">@font/roboto_bold_otf</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">13sp</item>
+        <item name="lineHeight">16sp</item>
+    </style>
+
+    <style name="body_5">
+        <item name="android:fontFamily">@font/roboto_medium_otf</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">12sp</item>
+        <item name="lineHeight">18sp</item>
+    </style>
+
+    <style name="body_6">
+        <item name="android:fontFamily">@font/roboto_regular_otf</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">11sp</item>
+        <item name="lineHeight">13sp</item>
+    </style>
+
+    <style name="body_7">
+        <item name="android:fontFamily">@font/roboto_regular_otf</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">10sp</item>
+        <item name="lineHeight">12sp</item>
+    </style>
+
+    <style name="Button_1">
+        <item name="android:fontFamily">@font/roboto_bold_otf</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="lineHeight">20sp</item>
+    </style>
+
+    <style name="Button_2">
+        <item name="android:fontFamily">@font/roboto_medium_otf</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">12sp</item>
+        <item name="lineHeight">12sp</item>
+    </style>
 
 </resources>
 
