--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".src.register.manager.ManagerOnBoardingActivity">
+    tools:context=".src.onboard.manager.ManagerOnBoardingActivity">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/onboard_vp2"
