--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
 
     <color name="main_ffd85c">#FFD85C</color>
 
-    <color name="sub1_343434">#343434</color>
+    <color name="sub1_adadad">#ADADAD</color>
     <color name="sub2_ffc400">#ffc400</color>
     <color name="sub3_ff9d00">#FF9D00</color>
     <color name="sub4_ff8700">#FF8700</color>
