--- a/app/src/main/res/layout/activity_running_time.xml
+++ b/app/src/main/res/layout/activity_running_time.xml
@@ -71,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_running_time"
         app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
@@ -91,7 +91,7 @@
                 <LinearLayout
                     android:id="@+id/ll_running_time_same"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:paddingVertical="22dp"
                     android:orientation="horizontal"
                     android:layout_marginHorizontal="24dp"
@@ -126,10 +126,12 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/tv_running_time_days"
+                android:id="@+id/rv_running_time_days"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:paddingBottom="?attr/actionBarSize"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_rv_running_time"/>
         </LinearLayout>
 
