--- a/app/src/main/res/color/selector_tv_done.xml
+++ b/app/src/main/res/color/selector_tv_done.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/sub1_adadad" android:state_checked="false" android:state_selected="false" android:state_pressed="false" />
-    <item android:color="@color/other4_ffb100" android:state_checked="true" android:state_selected="true" android:state_pressed="true"/>
+    <item android:color="@color/sub1_adadad" android:state_enabled="false"/>
+    <item android:color="@color/other4_ffb100" android:state_enabled="true"/>
 </selector>
