--- a/app/src/main/res/drawable/bg_run_time_inactive.xml
+++ b/app/src/main/res/drawable/bg_run_time_inactive.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp"/>
+    <solid android:color="@color/gray2_f5f5f5"/>
     <stroke
         android:width="1dp"
         android:color="@color/gray4_ededed" />
