[feat] 할 일 추가 기능 구현

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -122,7 +122,7 @@
             </LinearLayout>
 
             <FrameLayout
-                android:id="@+id/float_writing_btn"
+                android:id="@+id/float_add_work_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingVertical="14dp"
